...
        android:orientation="vertical"
        >

        <!--<ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/find_results"
            android:layout_weight="1"
            android:alpha="0.54"/>-->

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
